    the PPC platform, lead to stack corruption; this has been fixed.
    (reported by Rainer Joswig)
  * bug fix: ASH on an (UNSIGNED-BYTE 32) with a shift of -32 or lower
    no longer ever returns 1 instead of 0.  (thanks to Lars Brinkhoff)
  * fixed bug 285: TRUNCATE on bignum arguments, and indeed bignum
    arithmetic in general, is now much more reliable on the PPC
    platform.
  * optimization: restored some effective method precomputation in
    CLOS (turned off by an ANSI fix in sbcl-0.8.3); the amount of
    precomputation is now tunable.
  * optimization: compiler-internal data structure use has been
    reviewed, and changes have been made that should improve the
    performance of the compiler by about 20%.
  * optimization: performance of FILL (and :INITIAL-ELEMENT) on
    simple-base-strings and simple-bit-vectors is improved.
  * microoptimization: the compiler is better able to make use of the
    x86 LEA instruction for multiplication by constants.
  * bug fix: in some situations compiler did not report usage of
    generic arithmetic in (SPEED 3) policy.
  * bug 145b fix: compiler used wrong type specifier while converting
    MEMBER-types to numeric.
  * bug fix: COMPILE-FILE must bind *READTABLE*. (reported by Doug
    McNaught)
  * fixed some bugs revealed by Paul Dietz' test suite:
    ** the RETURN clause in LOOP is now equivalent to DO (RETURN ...).
    ** ROUND and FROUND now give the right answer when given very
       small float arguments.
    ** (FLOAT X) for X of type DOUBLE-FLOAT now returns X in all
       circumstances.
    ** optimizer for (EXPT X 0) did not work for X not of type FLOAT.
    ** (GCD 0 <negative-integer>) returned <negative-integer>.
    ** LCM should return a non-negative integer.
    ** PARSE-INTEGER returned the index of a terminator instead of the
       upper bounding index of a substring in case :JUNK-ALLOWED NIL.
    ** PARSE-INTEGER returned an incorrect index being applied to a
       displaced string.